# AU423_IPSA

./: README.md
control_robot_ipsa/: CMakeLists.txt  package.xml
control_robot_ipsa/config/: control.yaml  dimensionsRobot.yaml  xz.yaml
control_robot_ipsa/launch/: control.launch  my_inverse_geometric.launch
control_robot_ipsa/src/: computeXZ.cpp  planification.cpp
description_robot_ipsa/: package.xml
description_robot_ipsa/launch/: display.launch  simu.launch
description_robot_ipsa/rviz/: config.rviz
description_robot_ipsa/urdf/: example_robot.xacro  robot_ipsa.gazebo  robot_ipsa.xacro  transmission.xacro
